objects/CMPL123CME__MedDRA_International_Order__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of International Order</description>
        <inlineHelpText>Active Status of International Order</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the System Organ Class</description>
        <inlineHelpText>8-digit code to identify the System Organ Class</inlineHelpText>
        <label>SOC Code</label>
        <referenceTo>CMPL123CME__MedDRA_System_Organ_Class__c</referenceTo>
        <relationshipLabel>MedDRA International Order</relationshipLabel>
        <relationshipName>MedDRA_International_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_intl_ord_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>SOC and INTL ORD Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MedDRA International Order</label>
    <nameField>
        <label>INTL ORD Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA International Order</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__SOC_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>